# autoware.universe

.github/workflows/: build-and-test-differential-self-hosted.yaml  build-and-test-differential.yaml  build-and-test-self-hosted.yaml  build-and-test.yaml  check-build-depends.yaml  clang-tidy-pr-comments.yaml
common/kalman_filter/: CMakeLists.txt  package.xml
common/kalman_filter/include/kalman_filter/: time_delay_kalman_filter_ocl.hpp
common/kalman_filter/kernel/: predict_with_delay.cl
common/kalman_filter/src/: time_delay_kalman_filter.cpp  time_delay_kalman_filter_ocl.cpp
launch/tier4_localization_launch/: package.xml
launch/tier4_localization_launch/config/: ndt_scan_matcher.param.yaml
launch/tier4_localization_launch/launch/: localization.launch.xml
launch/tier4_localization_launch/launch/pose_twist_fusion_filter/: pose_twist_fusion_filter.launch.xml
launch/tier4_vehicle_launch/launch/: vehicle.launch.xml
localization/ekf_localizer/: CMakeLists.txt
localization/ekf_localizer_ocl/: CMakeLists.txt  README.md  package.xml
localization/ekf_localizer_ocl/include/ekf_localizer_ocl/: ekf_localizer_ocl.hpp
localization/ekf_localizer_ocl/launch/: ekf_localizer_ocl.launch.xml
localization/ekf_localizer_ocl/src/: ekf_localizer_ocl.cpp  ekf_localizer_ocl_node.cpp
localization/ndt/: CMakeLists.txt  package.xml
localization/ndt/src/: ocl.cpp
localization/ndt_scan_matcher/: CMakeLists.txt  package.xml
localization/ndt_scan_matcher/config/: ndt_scan_matcher.param.yaml
localization/ndt_scan_matcher/launch/: ndt_scan_matcher.launch.xml
localization/ndt_scan_matcher/src/: ndt_scan_matcher_core.cpp
localization/pose_estimator_hornet/: CMakeLists.txt  README.md  package.xml
localization/pose_estimator_hornet/launch/: pose_estimator_hornet.launch.xml
localization/pose_estimator_hornet/src/: pose_estimator_hornet.cpp  pose_estimator_hornet_node.cpp
sensing/pointcloud_preprocessor_driver/: CMakeLists.txt  README.md  package.xml
sensing/pointcloud_preprocessor_driver/include/pointcloud_preprocessor_driver/: pointcloud_preprocessor_driver.hpp
sensing/pointcloud_preprocessor_driver/launch/: pointcloud_preprocessor_driver.launch.xml
sensing/pointcloud_preprocessor_driver/src/: pointcloud_preprocessor_driver.cpp  pointcloud_preprocessor_driver_node.cpp
tier4-proposal/system/system_error_monitor/: index.html
(+4 files in other folders)
